fix: repeat gap in svg texture

--- a/src/styles.css
+++ b/src/styles.css
@@ -150,6 +150,8 @@ li {
   opacity: 0.3;
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 700 700' width='700' height='700'><defs><filter id='nnnoise-filter' x='-20%' y='-20%' width='140%' height='140%' filterUnits='objectBoundingBox' primitiveUnits='userSpaceOnUse' color-interpolation-filters='linearRGB'><feTurbulence type='fractalNoise' baseFrequency='0.05' numOctaves='4' seed='15' stitchTiles='stitch' x='0%' y='0%' width='100%' height='100%' result='turbulence'></feTurbulence><feSpecularLighting surfaceScale='1' specularConstant='1.2' specularExponent='20' lighting-color='%237957A8' x='0%' y='0%' width='100%' height='100%' in='turbulence' result='specularLighting'><feDistantLight azimuth='3' elevation='68'></feDistantLight></feSpecularLighting><feColorMatrix type='saturate' values='0' x='0%' y='0%' width='100%' height='100%' in='specularLighting' result='colormatrix'></feColorMatrix></filter></defs><rect width='700' height='700' fill='transparent'></rect><rect width='700' height='700' fill='%237957a8' filter='url(%23nnnoise-filter)'></rect></svg>");
   mix-blend-mode: multiply;
+  background-repeat: repeat;
+  background-size: 1000px 1000px;
 }
 
 .retro-dialogue::before {
